@@ -1,5 +1,7 @@
 2015-05-23  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
+	* src/window.c: Remove SMOOTH code blocks.
+
 	* src/minicom.h, src/vt100.c, src/window.c, src/window.h: Add
 	  alternate screen support. Initial change by
 	  陈愚人 <yurencheng@gmail.com>.
